Termine formato de texto

--- a/HTML/1-Formato-texto/index.html
+++ b/HTML/1-Formato-texto/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Titulo de la página -->
     <title>Formato de Texto</title>
 </head>
 <body>
@@ -28,5 +29,38 @@
     <em>Este texto se muestra en cúrsiva o itálica</em> <br>
     <p>La útlima palabra de este texto se muestra resaltada con fondo de color <mark>amarillo</mark></p>
 
+    <p>Para aprobar el proyecto de ley se necesita del <del>45% de los votos</del> <ins>60% de los votos</ins></p>
+
+    <p><small>Al enviar este formulario aceptas nuestras "Politicas de Privacidad"</small></p>
+    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quisquam maiores neque ipsum, veritatis in magni vel iusto ex quae amet. Dolores fugiat voluptate commodi aut labore, voluptatum minima sint?</p>
+    <br>
+    <p>Quae pariatur reiciendis sunt repudiandae optio excepturi, natus magni porro illum ea nemo dolores laudantium earum nulla distinctio dolor assumenda dolorem nihil quidem deleniti amet necessitatibus, nesciunt animi vel. Maxime!</p>
+    <hr>
+    <p>Tenetur suscipit iste accusamus eveniet aperiam ut doloremque, magni laborum error quo enim iusto recusandae nulla temporibus voluptatem fugit facilis sit natus fuga? Quisquam aut voluptatibus quibusdam ad? Deserunt, necessitatibus.</p>
+    <br>
+    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum totam asperiores quo officiis atque ea aliquid enim. Eaque amet quod alias ullam ducimus laborum provident, illum aut, aliquid aperiam nisi.
+    Alias, quia magni quas ducimus repellendus odio nobis, consequuntur saepe minima non pariatur perspiciatis facilis ad enim, voluptatibus fuga dolor nihil aut tempora. Quas id perferendis inventore voluptatum aliquid ex?
+    Veritatis libero laborum voluptates dolore praesentium. Ullam placeat dolore minus eligendi, magni porro, eius culpa asperiores modi distinctio corrupti quos ab quidem quae, rem ratione labore? Corporis qui quod recusandae.
+    Magnam facere tenetur officiis quasi at ullam harum excepturi natus architecto dolore quo ad, laborum quisquam modi aperiam ipsam itaque suscipit recusandae nam optio cumque quos distinctio quam! Veritatis, suscipit?
+    Aliquid est reiciendis velit temporibus hic neque unde amet, sint quidem consequuntur ullam officiis placeat eius, vero nisi deleniti quos id laboriosam, dolor ipsa voluptates illum? Vel quas quibusdam facere?</p> -->
+
+    <p>El primer libro de la <cite>Trilogía Cósmica</cite> C.S. Lewis se titula <cite>Más allá del planeta silencioso</cite> (1983)</p>
+
+    <p>Tal y como decía Aristóteles:
+        <q>Somos lo que hacemos día a día. De modo que la excelencia no es un acto sino un hábito</q>
+    </p>
+
+    <p>A tales efectos, el experto ha declarado:
+        <blockquote>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ullam laboriosam commodi, consequatur perferendis fuga! Nostrum temporibus eum cum iusto, sapiente velit! Quisquam, hic obcaecati nemo dolore eum quas esse.
+            Exercitationem corrupti ea repudiandae quo maiores itaque architecto, dolores pariatur, voluptas provident obcaecati ipsam amet! Veritatis corrupti itaque error, reprehenderit quae ea est in assumenda quod praesentium deleniti ullam inventore.
+            Saepe odio doloremque cum velit tenetur rem autem fugit perspiciatis architecto fugiat nesciunt ad non labore obcaecati, corrupti modi voluptatem voluptates, deserunt voluptatibus beatae aut dignissimos aperiam quaerat. Magnam, quasi!
+        </blockquote>
+
+    </p>
+
+    <p>La fórmula química del agua es H<sub>2</sub>0</p>
+    <p>El número 5,700,000 en notación científica equivale a 5x10<sup>6</sup></p>
 </body>
 </html>
